--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,77 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Theme */
+:root {
+  --main-color: #d40000;
+  --border-color: #4d0000;
+  --hover-color: #d40000;
+  color-scheme: dark;
+}
+
+@font-face {
+  font-family: Poppins-Regular;
+  src: url(assets/fonts/Poppins-Regular.ttf);
+}
+
+@font-face {
+  font-family: Poppins-Medium;
+  src: url(assets/fonts/Poppins-Medium.ttf);
+}
+
+.mediaPanel {
+  opacity: 90%;
+  content: "";
+  border: 2px solid var(--border-color);
+  transition: border 0.2s;
+  background-color: #1f1f1f;
+}
+.mediaPanel:hover {
+  opacity: 100%;
+  border: 2px solid var(--main-color);
+}
+
+.button {
+  appearance: none;
+  border-radius: 15px;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.11) 0 8px 15px;
+  color: var(--main-color);
+  background-color: #1c1a1c;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Poppins-Medium;
+  font-size: 18px;
+  line-height: normal;
+  margin: 0;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 10px 15px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+  border: 3px solid transparent;
+}
+
+.button:disabled {
+  pointer-events: none;
+}
+
+.button:hover {
+  color: var(--hover-color);
+  background-color: #202020;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+  border: 3px solid var(--hover-color);
+}
+
+.button:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
