--- a/src/index.css
+++ b/src/index.css
@@ -22,10 +22,9 @@
 
 .mediaPanel {
   opacity: 90%;
-  content: "";
   border: 2px solid var(--border-color);
   transition: border 0.2s;
-  background-color: #1f1f1f;
+  background-color: #141313;
 }
 .mediaPanel:hover {
   opacity: 100%;
@@ -33,24 +32,14 @@
 }
 
 .button {
-  appearance: none;
   border-radius: 15px;
-  box-sizing: border-box;
   box-shadow: rgba(0, 0, 0, 0.11) 0 8px 15px;
   color: var(--main-color);
   background-color: #1c1a1c;
-  cursor: pointer;
-  display: inline-block;
   font-family: Poppins-Medium;
   font-size: 18px;
-  line-height: normal;
   margin: 0;
-  min-height: 60px;
-  min-width: 0;
-  outline: none;
   padding: 10px 15px;
-  text-align: center;
-  text-decoration: none;
   transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
   user-select: none;
   -webkit-user-select: none;
